--- a/src/pages/about/About.scss
+++ b/src/pages/about/About.scss
@@ -260,6 +260,32 @@
 
 .ee-title-pill {
   /* width: min(200px, 100%); */
+  /* border-radius: 999px; */
+  /* border: 1px solid rgba(227, 246, 255, 0.95); */
+  /* background: linear-gradient(180deg, rgba(68, 94, 118, 0.96) 0%, rgba(55, 79, 101, 0.96) 100%); */
+  /* color: #fff; */
+  /* text-align: center; */
+  /* font: 600 clamp(1.15rem, 1.4vw, 1.5rem) / 1 "Diodrum Arabic"; */
+  /* padding: 0.7rem 2rem; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.ee-title-pill p {
+  // width: min(200px, 100%);
+  border-radius: 999px;
+  border: 1px solid rgba(227, 246, 255, 0.95);
+  background: linear-gradient(180deg, rgba(68, 94, 118, 0.96) 0%, rgba(55, 79, 101, 0.96) 100%);
+  color: #fff;
+  text-align: center;
+  font: 600 clamp(1.15rem, 1.4vw, 1.5rem) / 1 "Diodrum Arabic";
+  padding: 0.7rem 2rem;
+  margin: 0;
+}
+
+.fc-title-pill {
+  /* width: min(200px, 100%); */
   border-radius: 999px;
   border: 1px solid rgba(227, 246, 255, 0.95);
   background: linear-gradient(180deg, rgba(68, 94, 118, 0.96) 0%, rgba(55, 79, 101, 0.96) 100%);
@@ -270,12 +296,20 @@
 }
 
 .ee-title-underline {
+  // width: min(120px, 65%);
+  // height: 10px;
+  // margin-top: 0.25rem;
+  // margin-left: 2rem;
+  // border-radius: 999px;
+  // background: rgb(52 78 93 / 85%);
   width: min(120px, 65%);
-  height: 10px;
-  margin-top: 0.25rem;
-  margin-left: 2rem;
+  height: 7px;
+  /* margin-top: 0.25rem; */
+  /* margin-left: 2rem; */
   border-radius: 999px;
-  background: rgb(52 78 93 / 85%);
+  background: rgba(52, 78, 93, 1);
+  transform: translateY(12px);
+  z-index: 28;
 }
 
 .ee-card {
